Fix error when calling byteLength on detached ArrayBuffer

ArrayBuffer constructed from en empty QByteArray are detached,
calling byteLength should not throw an error.

According to ECMA specifications the `byteLength` property
of a detached ArrayBuffer should retrurn 0.

See https://tc39.es/ecma262/multipage/structured-data.html#sec-get-arraybuffer.prototype.bytelength

[ChangeLog][QtQml][Important Behavior Changes] ArrayBuffer.byteLength()
now returns 0 on detached ArrayBuffers, conforming to ECMAScript 2021.

Fixes: QTBUG-103925
Change-Id: Ib1c325eff25459980e10a1f3cd9fb7cb3b8eb5e5
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>